--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -441,6 +441,14 @@
         }, 3000);
       }
     });
+
+
+    window.addEventListener('pageshow', function (event) {
+    if (event.persisted || performance.getEntriesByType("navigation")[0].type === "back_forward") {
+      // Force reload if coming from bfcache
+      window.location.reload();
+    }
+  });
   </script>
 </body>
 </html>
