--- a/views/user/welcomeHome.ejs
+++ b/views/user/welcomeHome.ejs
@@ -2233,6 +2233,13 @@ if (referralCode) {
         });
       }
     })();
+
+      window.addEventListener('pageshow', function (event) {
+    if (event.persisted || performance.getEntriesByType("navigation")[0].type === "back_forward") {
+      // Force reload if coming from bfcache
+      window.location.reload();
+    }
+  });
   </script>
   
 </body>
